<resources>
    <string name="app_name">idRc 2019</string>
    <string name="kullanici">Kullanıcı Adı</string>
    <string name="parola">Şifre</string>
    <string name="kullanici_hatirla">Beni Hatırla</string>
    <string name="giris">Giriş Yap</string>
    <string name="bilgiler_eksik">Bilgileriniz Eksik!!</string>
    <string name="giris_hata">Hatalı Giriş,Bilgilerinizi Kontrol Ediniz</string>
    <string name="msj_status_order">Liste Boş</string>
    <string name="conference_name">Etkinlik:</string>
    <string name="conference_shortName">Kodu:</string>
    <string name="conference_location">Yer:</string>
    <string name="conference_address">Adres:</string>
    <string name="conference_website">Web Sitesi:</string>
    <string name="conference_panel">Panel:</string>
    <string name="conference_startDate">Başlangıç Tarihi:</string>
    <string name="conference_endDate">Bitiş Tarihi:</string>
    <string name="name_etkinlik">Etkinlik Listesi</string>
    <string name="name_bildiri">Bildiri Listesi</string>
    <string name="search_hint">Type name…</string>
    <string name="loading">Yükleniyor...</string>
    <string name="bildiri_listesi">Bildiri Listesi</string>
    <string name="etkinlik_listesi">Etkinlik Listesi</string>
    <string name="bildiriNo">No:</string>
    <string name="bildiriKonu">Konu:</string>
    <string name="bildiriTuru">Türü:</string>
    <string name="bildiriBasligi">Başlığı:</string>
    <string name="bildiriYazarlar">Yazar Bilgileri:</string>
    <string name="bildiriDurumu">Durumu:</string>
    <string name="uygulama_cikis">Uygulama Çıkışı</string>
    <string name="hesap_degistir">Çıkış Yapmak İstediğinizden Emin misiniz?</string>
    <string name="iptal">İptal</string>
    <string name="hesap_cikis">Çıkış Yap</string>
    <string name="name_takvim">Program</string>
    <string name="name_katilimci_info">Katılımcı \nBilgilendirme</string>
    <string name="name_katilimci_bilgilendirme">Katılımcı Bilgilendirme</string>
    <string name="name_sponsor">Sponsorlar</string>
    <string name="name_exhibition">Sergi Firmaları</string>
    <string name="name_duyuru">Duyurular</string>
    <string name="name_about">Hakkımızda</string>
    <string name="name_summary">Özet Gönderim</string>
    <string name="name_about_content">Resilience (Dirençlilik); Afet Risk Azaltma Uluslararası Ofisi (UNISDR) Hyogo Eylem Planı sonuç raporunda, “Tehlikelere maruz kalmış bir sistemin, topluluğun veya toplumun, kendi temel yapılarını ve işlevlerini koruma ve onarma dahil, bir tehlikenin etkileri karşısında zamanında ve etkin bir şekilde direnme, soğurma, uyum geliştirme ve iyileşme becerisi” olarak tanımlamaktadır. \nInternational Disaster and Resilience Congress (idRc 2019), bu ana tanım altında yapılmış olan çalışmaların değerlendirilmesi ve dünya ile paylaşılması amacıyla oluşturulmuş akademik bir etkinliktir. \n\nidRc 2019, “from Risk to Resilience” uluslararası hakemli bir dergi olan Resilience Dergisi’nin ve editör grubunun organizasyonudur. \n\nDirençlilik konusunda farklı disiplinlerden çalışmaların ortak bir platformda konuşulduğu ve tartışıldığı bir toplantı olmasını amaçlıyoruz. Toplantı sonucunda yeni ortak çalışma grupları oluşturmak ve dirençlilik konusundaki çalışmalara yenilerini ekleyebilmek istiyoruz. </string>
    <string name="name_summary_title">Özet Gönderim</string>
    <string name="name_summary_title1">idrc 2019’a katılmak veya sunum yapmak isteyen katılımcılar bildiri gönerilerini ve kayıt işlemlerini</string>
    <string name="name_summary_title2">http://kongresistemi.com/idrc2019 adresinden yaptıracaklardır.</string>
    <string name="name_summary_title3">Bildiri özetleriniz, 15 Haziran 2019 tarihine kadar hakemler tarafından değerlendirildikten sonra KABUL/RED durumu tarafınıza bildirilecektir.\n\nSunumu gerçekleştirilen bildirilerin Tam Metinleri değerlendirmeye alınarak idrc 2019 Tam Metinler kitabında veya isteğinize göre Resilience Dergisinde makale olarak basılacaktır.\n\nÖzetler Türkçe ve İngilizce olarak 2 dilde 400 kelimeyi aşmayacak şekilde gönderilmelidir. Tam metinler tek dilde 4 sayfayı geçyecek formatta gönderilebilir.\n\nKayıt ücreti ödemeyen katılımcıların bildirileri özet kitabına girmeyecek ve sunum yapamayacaklardır.\n\nKongreye dinleyici olarak katılmak ücretsizdir. Dinleyiciler kayıt haklarından istifade edemeyeceklerdir. ( Yaka kartı, öğle yemekleri, kongre kiti v.b. )</string>
    <string name="program">Program</string>
    <string name="detail">Detay</string>
    <string name="sponsor">Sponsorlar</string>

    <string name="salon_speaker">OTURUM BAŞKANI:</string>
    <string name="salon1">Salon 1</string>
    <string name="salon2">Salon 2</string>
    <string name="salon3">Salon 3</string>
    <string name="salon4">Salon 4</string>
    <string name="salon5">Salon 5</string>
    <string name="salon6">Salon 6</string>
    <string name="salon7">Salon 7</string>
    <string name="salon8">Salon 8</string>
    <string name="salon9">Salon 9</string>
    <string name="salon10">Salon 10</string>
    <string name="salon11">Salon 11</string>
    <string name="salon12">Salon 12</string>
    <string name="salon13">Salon 13</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
