<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.Tab2"
    android:orientation="vertical"
    >

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        >

        <LinearLayout
            android:id="@+id/innerLay2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn2_1"
                android:text="@string/salon3"
                android:background="@drawable/button_background_selector"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn2_14"
                android:text="@string/salon4"
                android:background="@drawable/button_background_selector"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn2_2"
                android:text="@string/salon5"
                android:background="@drawable/button_background_selector"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn2_3"
                android:text="@string/salon6"
                android:background="@drawable/button_background_selector"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn2_4"
                android:text="@string/salon7"
                android:background="@drawable/button_background_selector"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn2_5"
                android:text="@string/salon8"
                android:background="@drawable/button_background_selector"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn2_6"
                android:text="@string/salon9"
                android:background="@drawable/button_background_selector"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn2_7"
                android:text="@string/salon10"
                android:background="@drawable/button_background_selector"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn2_8"
                android:text="@string/salon11"
                android:background="@drawable/button_background_selector"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn2_9"
                android:text="@string/salon12"
                android:background="@drawable/button_background_selector"
                />

        </LinearLayout>


    </HorizontalScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="......"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/green"
        android:id="@+id/title2_salon"
        />



    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/list_tab2"
        android:layout_margin="20dp"
        android:divider="@android:color/transparent"
        android:dividerHeight="10.0sp"
        />

</LinearLayout>