<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
         android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bildiriNo"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="...."
            android:textSize="16sp"
            android:textColor="@color/black"
            android:id="@+id/txt_no"
            android:paddingLeft="5dp"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bildiriKonu"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="...."
            android:textSize="16sp"
            android:textColor="@color/black"
            android:id="@+id/txt_konusu"
            android:paddingLeft="5dp"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bildiriTuru"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="...."
            android:textSize="16sp"
            android:textColor="@color/black"
            android:id="@+id/txt_turu"
            android:paddingLeft="5dp"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bildiriBasligi"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="...."
            android:textSize="16sp"
            android:textColor="@color/black"
            android:id="@+id/txt_basligi"
            android:paddingLeft="5dp"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bildiriYazarlar"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="...."
            android:textSize="16sp"
            android:textColor="@color/black"
            android:id="@+id/txt_yazar_bilgileri"
            android:paddingLeft="5dp"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bildiriDurumu"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:paddingLeft="5dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:id="@+id/txt_durumu"
            />


    </LinearLayout>

    </LinearLayout>

    </android.support.v7.widget.CardView>



</LinearLayout>