<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_gravity="center"
            >

            <ImageView
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:id="@+id/img_logo"
                android:layout_gravity="center"
                android:src="@drawable/idrc_logo"
                />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_kullanici"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/kullanici"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_sifre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/parola"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />

            </android.support.design.widget.TextInputLayout>


            <CheckBox
                android:id="@+id/btn_remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/kullanici_hatirla" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/giris"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@drawable/btn_item_clicked"
                />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                />

        </LinearLayout>
    </ScrollView>

</LinearLayout>

</android.support.design.widget.CoordinatorLayout>