<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">



        <LinearLayout
            android:id="@+id/lyt_etkinlik"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:id="@+id/img_logo"
                android:layout_gravity="center"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                >


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/conference_name"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:paddingLeft="12dp"
                    />

                <TextView
                    android:text="Heading"
                    android:textSize="16sp"
                    android:paddingLeft="5dp"
                    android:textColor="@color/black"
                    android:id="@+id/txt_head"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>


            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/conference_shortName"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:paddingLeft="12dp"
                    />

                <TextView
                    android:textSize="16sp"
                    android:text="Description"
                    android:id="@+id/txt_kodu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:paddingLeft="5dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/conference_location"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:paddingLeft="12dp"
                    />

                <TextView
                    android:textSize="16sp"
                    android:text="Date"
                    android:id="@+id/txt_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:paddingLeft="5dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/conference_address"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:paddingLeft="12dp"
                    />

                <TextView
                    android:textSize="16sp"
                    android:text="Date"
                    android:id="@+id/txt_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:paddingLeft="5dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/conference_website"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:paddingLeft="12dp"
                    />

                <TextView
                    android:textSize="16sp"
                    android:text="Date"
                    android:id="@+id/txt_website"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:paddingLeft="5dp"
                    android:autoLink="web"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/conference_panel"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:paddingLeft="12dp"
                    />

                <TextView
                    android:textSize="16sp"
                    android:text="Date"
                    android:id="@+id/txt_panel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:paddingLeft="5dp"
                    android:autoLink="web"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/conference_startDate"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:paddingLeft="12dp"
                    />

                <TextView
                    android:textSize="16sp"
                    android:text="Date"
                    android:id="@+id/txt_DateStart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:paddingLeft="5dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/conference_endDate"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:paddingLeft="12dp"
                    />

                <TextView
                    android:textSize="16sp"
                    android:text="Date"
                    android:id="@+id/txt_DateEnd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:paddingLeft="5dp"/>

            </LinearLayout>

        </LinearLayout>

</LinearLayout>